side bar filtering

--- a/views/AddProduct.ejs
+++ b/views/AddProduct.ejs
@@ -78,7 +78,7 @@
                                 <div class="row col-12 py-2">
                                     <div class="col-md-5">
                                         <label for="country" class="form-label">Main Category</label>
-                                        <select class="form-select border"id="select1" name="category1" oninput="myFunction()" required>
+                                        <select class="form-select border"id="select1" name="catigory1" oninput="myFunction()" required>
                                             <option value="">Choose...</option>
                                             <option value="Phones">Phones</option>
                                             <option value="Books">Books</option>
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <label for="state" class="form-label">Derived ategory</label>
-                                        <select class="form-select border" id="select2"name="catigory2" >
+                                        <select class="form-select border" id="select2"name="catigory2" required >
                                             <option id="choice" value="">Choose...</option>
                                         </select>
                                     </div>
@@ -103,12 +103,7 @@
                                     <label for="text" class="form-label">Add full descripion <span class="text-muted"></span></label>
                                     <textarea type="text" name="l_description" class="form-control border" cols="30" rows="7" id="fulldescription" placeholder="add full description" required></textarea>
                                 </div>
-                                <!-- <div class="col-12 py-2">
-                                    <label for="url" class="form-label">Checkout URL<span
-                                            class="text-muted"></span></label>
-                                    <input type="url" class="form-control border" id="email"
-                                        placeholder="http://www.example.com" required>
-                                </div> -->
+                                
                                 <div class="my-2">
                                     <p class="h4 ml-4">Share this Product</p>
                                     <div class="socialIconShare ml-2">
