--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -7,11 +7,14 @@
   box-sizing: border-box;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  box-shadow: 0 0 20px royalblue;
+  box-shadow: 0 0 20px darkgrey;
+  padding-top: 10px;
 }
 .main_container .card {
   border: 2px solid rgba(0, 0, 139, 0.468);
   border-radius: 20px;
+  display: block;
+  margin: 10px 8px;
 }
 .main_container .card .card-header{
   background-color: #e5f8ff;
@@ -119,11 +122,14 @@ ul.slides input {
 
 .carousel-dots {
   position: absolute;
+  width: 20%;
   left: 0;
   right: 0;
   bottom: 20px;
   z-index: 999;
   text-align: center;
+  display: block;
+  margin: auto;
 }
 
 .carousel-dots .carousel-dot {
@@ -131,7 +137,7 @@ ul.slides input {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: #0000cdc7;
   opacity: 0.5;
   margin: 10px;
 }
@@ -157,3 +163,4 @@ opacity: 1;
 
 
 input:checked + .slide-container .nav label { display: block; }
+
