--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -37,8 +37,8 @@
             <div class="row mt-3">
                 <div class="col-1"></div>
                 <div class="itemsContainer col">
-                    <% user.cart.forEach( object => { %>
-                        <% if(object.product.img.contentType==''){ %>
+                    <% user.cart.forEach( element => { %>
+                        <% if(element.product.img.contentType==''){ %>
                             <div class="col mb-3 cartproducts border py-3 d-flex align-items-center justify-content-center" style="width:100%;">
                                 <h3 class="text-success">The cart is empty</h3>
                             </div>
@@ -46,18 +46,17 @@
                             <div class="col mb-3 cartproducts border py-3">
                                 <div class="d-flex">
                                     <div class="d-flex">
-                                        <div><img src="data:image/<%= object.product.img.contentType %>;base64,<%= object.product.img.data.toString('base64') %>" alt="imageproduct" class="imageproduct"></div>
-                                        <div><img src="" alt="imageproduct" class="imageproduct"></div>
+                                        <div><img src="data:image/<%= element.product.img.contentType %>;base64,<%= element.product.img.data.toString('base64') %>" alt="imageproduct" class="imageproduct"></div>
                                         <div class="ml-4">
-                                            <p class="h3 ml-3"><%= object.product.name %></p>
-                                            <p class="h5 ml-3"><%= object.product.s_description %></p>
-                                            <p class="h4 ml-3">$ <%= object.product.price %></p>
+                                            <p class="h3 ml-3"><%= element.product.name %></p>
+                                            <p class="h5 ml-3"><%= element.product.s_description %></p>
+                                            <p class="h4 ml-3">$ <%= element.product.price %></p>
                                             <a href="#" class="text-success ml-3">Remove</a>
                                         </div>
                                     </div>
                                     <div class="d-flex ml-5">
                                         <p class="h4 mt-1">Qty</p>
-                                        <div class="smallBox border"><%= object.number %></div>
+                                        <div class="smallBox border"><%= element.number %></div>
                                         <!-- <input type="number" class="form-control border w-25 ml-3 py-1 px-1 text-center"
                                             value="1"> -->
                                     </div>
@@ -67,7 +66,7 @@
                         <% } %>
                     <% }); %>
                 </div>
-                <div class="col col-lg-3 mx-lg-5 border checkout pt-3">
+                <div class="col col-lg-3 mx-lg-5 border checkout pt-3" style="height: fit-content;">
                     <p class="h3">Information</p>
                     <div class="d-flex mt-1">
                         <label for="firstName" name="fname" class="form-label col-4">First name</label>
