--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,6 +1,6 @@
 <%- include("header.ejs") -%>
 <link rel="stylesheet" href="css/MainCssFiles.css">
-<link rel="stylesheet" href="css/HomePage.css">
+<!-- <link rel="stylesheet" href="css/HomePage.css"> -->
 <link rel="stylesheet" href="css/customStyle.css">
 </head>
 
@@ -10,10 +10,10 @@
     
     <!-- main content of the page -->
     <div class="main_container">
-        <div class="row">
+        <div class="row "> 
             <% products.forEach(product=>{ %>
                 <div class="col-lg-3 col-md-4 col-sm-6" >
-                    <div class="card Item">
+                    <div class="card">
                         <div class="card-header">
                             <form id="<%= product._id %>" action="/productPage" method="post">
                                 <a href="#" onclick="$('#<%= product._id %>').submit()"><img class="product_image"
@@ -22,9 +22,9 @@
                             </form>
                         </div>
                         <div class="card-body">
-                            <h1>
+                            <h3 class="text-dark">
                                 <%= product.name %>
-                            </h1>
+                            </h3>
                             <p>
                                 <%= product.s_description %>
                             </p>
