--- a/views/navigation_bar.ejs
+++ b/views/navigation_bar.ejs
@@ -121,7 +121,7 @@
                     onclick="window.location.href='/main'">Home Page</button>
                 <li><a class="dropdown-item h5" href="/profile">Your Profile</a></li>
                 <li><a class="dropdown-item h5" href="/addProduct">Add Product</a></li>
-                <li><a class="dropdown-item h5" href="#">View cart</a></li>
+                <li><a class="dropdown-item h5" href="/cart">View cart</a></li>
                 <li><a class="dropdown-item h5" href="/signOut">Sign Out</a></li>
                 <!-- <div class="mt-5 dropdown-item darkmode">
                     <div id="switch">
