Adding the functionality for some buttons

--- a/views/AddProduct.ejs
+++ b/views/AddProduct.ejs
@@ -24,12 +24,10 @@
                         </button>
                         <div class="collapse navbar-collapse justify-content-center" id="nvbCollapse">
                             <ul class="navbar-nav ">
-                                <a class="nav-link ml-4" href="#"></i>Home</a>
-                                <a class="nav-link ml-4" href="#"></i>Trend</a>
-                                <a class="nav-link ml-4" href="#"></i>Best Price</a>
-                                <a class="nav-link ml-4" href="#"></i>Offers</a>
-                                <a class="nav-link ml-4" href="#"></i>Pages</a>
-                                <a class="nav-link ml-4" href="#"></i>Groups</a>
+                                <a class="nav-link ml-4" href="/main"></i>Home</a>
+                                <a class="nav-link ml-4" href="/main"></i>Trend</a>
+                                <a class="nav-link ml-4" href="/main"></i>Best Price</a>
+                                <a class="nav-link ml-4" href="/main"></i>Offers</a>
                             </ul>
                         </div>
                     </div>
