--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,8 +15,8 @@
                 <div class="col-lg-3 col-md-4 col-sm-6" >
                     <div class="card">
                         <div class="card-header">
-                            <form id="<%= product._id %>" action="/productPage" method="post">
-                                <a href="#" onclick="$('#<%= product._id %>').submit()"><img class="product_image"
+                            <form id="<%= product._id %>1" action="/productPage" method="post">
+                                <a href="#" onclick="$('#<%= product._id %>1').submit()"><img class="product_image"
                                     src="data:image/<%= product.img.contentType %>;base64,<%= product.img.data.toString('base64') %>"></a>
                                 <input type="hidden" name="productId" value="<%= product._id %>">
                             </form>
@@ -33,8 +33,12 @@
                             <h1>
                                 <%= product.price %> $
                             </h1>
-                            <button class="pricing-button btn btn-lg btn-success w-100" type="button">Add to
-                                cart</button>
+                            <form action="/addToCart" method="post" id="<%= product._id %>2">
+                                <a onclick="$('#<%= product._id %>2').submit()" class="pricing-button btn btn-lg btn-success w-100" type="button">ADD TO CART</a>
+                                <input type="hidden" name="number" value="1">
+                                <input type="hidden" name="page" value="main">
+                                <input type="hidden" name="id" value="<%= product._id %>">
+                            </form>
                         </div>
                     </div>
                 </div>
