--- a/views/navigation_bar.ejs
+++ b/views/navigation_bar.ejs
@@ -105,7 +105,7 @@
 
     <!-- dropdown menu  -->
     <div class="row mr-2 " >
-        <button class="btn col-6"><i class="bi bi-cart-plus"></i></button>
+        <a href="/cart" class="btn col-6"><i class="bi bi-cart-plus"></i></a>
         <div class="cart col-6">
             <!-- Cart Button -->
             <button class="header_img dropdown-toggle d-inline-block" data-toggle="dropdown" aria-expanded="false"
