--- a/views/navigation_bar.ejs
+++ b/views/navigation_bar.ejs
@@ -120,7 +120,9 @@
                 <button class="btn btn-success dropdown-item signinbtn"
                     onclick="window.location.href='/main'">Home Page</button>
                 <li><a class="dropdown-item h5" href="/profile">Your Profile</a></li>
-                <li><a class="dropdown-item h5" href="/addProduct">Add Product</a></li>
+                <% if (user.admin == true){ %>
+                    <li><a class="dropdown-item h5" href="/addProduct">Add Product</a></li>
+                <% } %>
                 <li><a class="dropdown-item h5" href="/cart">View cart</a></li>
                 <li><a class="dropdown-item h5" href="/signOut">Sign Out</a></li>
                 <!-- <div class="mt-5 dropdown-item darkmode">
